<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <packaging>pom</packaging>

  <groupId>org.biopax.paxtools</groupId>
  <artifactId>paxtools</artifactId>
  <version>6.0.0-SNAPSHOT</version>

  <name>Paxtools</name>

  <description>Paxtools is a Java library that allows software to read, write, analyze and manipulate BioPAX models.
    Paxtools provide a consistent, fully implemented, validating BioPAX API that significantly reduces development
    time of oftware that require programmatic access to BioPAX. Paxtools is modular, lightweight and platform
    independent to be easily embedded into applications.
  </description>

  <url>https://biopax.github.io/Paxtools</url>

  <organization>
    <name>BioPAX</name>
    <url>http://www.biopax.org</url>
  </organization>

  <modules>
    <module>paxtools-core</module>
    <module>gsea-converter</module>
    <module>psimi-converter</module>
    <module>sbgn-converter</module>
    <module>paxtools-console</module>
    <module>paxtools-query</module>
    <module>json-converter</module>
    <module>pattern</module>
    <module>normalizer</module>
  </modules>

  <properties>
    <github.global.server>github</github.global.server>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <developers>
    <developer>
      <id>emekdemir</id>
      <name>Emek Demir</name>
      <organization>CBIO MSKCC</organization>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
    </developer>
    <developer>
      <id>rodche</id>
      <name>Igor Rodchenkov</name>
      <organization>University of Toronto</organization>
      <roles>
        <role>developer</role>
      </roles>
    </developer>
    <developer>
      <id>ozgunbabur</id>
      <name>Ozgun Babur</name>
      <organization>CBIO MSKCC</organization>
      <roles>
        <role>developer</role>
      </roles>
    </developer>
    <developer>
      <id>kenichirofukuda</id>
      <name>Ken-Ichiro Fukuda</name>
      <organization />
      <roles>
        <role>developer</role>
      </roles>
    </developer>
    <developer>
      <id>armanaksoy</id>
      <name>B. Arman Aksoy</name>
      <organization>CBIO MSKCC</organization>
      <roles>
        <role>developer</role>
      </roles>
    </developer>
    <developer>
      <id>benjamingross</id>
      <name>Benjamin Gross</name>
      <organization>CBIO MSKCC</organization>
      <roles>
        <role>developer</role>
      </roles>
    </developer>
  </developers>

  <mailingLists>
    <mailingList>
      <name>BioPAX Discussion Group</name>
      <post>biopax-discuss@googlegroups.com</post>
    </mailingList>
  </mailingLists>

  <licenses>
    <license>
      <name>MIT license</name>
      <url>https://raw.githubusercontent.com/BioPAX/Paxtools/master/LICENSE</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/BioPAX/Paxtools/issues</url>
  </issueManagement>

  <ciManagement>
    <system>GitHub</system>
    <url>https://github.com/BioPAX/Paxtools/actions/workflows/maven.yml</url>
  </ciManagement>

  <profiles>
    <profile>
      <!-- It's auto-enabled during mvn release:perform;
      for manual releasing (not snapshots): mvn clean deploy -P sonatype-release
      -->
      <id>sonatype-release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>1.6.13</version>
            <extensions>true</extensions>
            <configuration>
              <serverId>ossrh</serverId>
              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <artifactId>maven-gpg-plugin</artifactId>
            <groupId>org.apache.maven.plugins</groupId>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <scm>
    <connection>scm:git:git://github.com/BioPAX/Paxtools.git</connection>
    <developerConnection>scm:git:git@github.com:BioPAX/Paxtools.git</developerConnection>
    <url>https://github.com/BioPAX/Paxtools</url>
    <tag>HEAD</tag>
  </scm>

  <distributionManagement>
    <site>
      <!-- do:
        mvn site site:stage -DstagingDirectory=/tmp/path
         - then manually copy the site and push to the gh-pages branch -->
      <id>github</id>
      <name>BioPAX/Paxtools Maven site</name>
      <url>https://biopax.github.io/Paxtools/${project.version}</url>
    </site>
    <repository>
      <id>ossrh</id>
      <name>Nexus Release Repository</name>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    <snapshotRepository>
      <id>ossrh</id>
      <name>Sonatype Nexus Snapshots</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
    </snapshotRepository>
    <downloadUrl>http://www.biopax.org/downloads/paxtools/</downloadUrl>
  </distributionManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
          <configuration>
            <release>17</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.2.1</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>3.0.1</version>
          <configuration>
            <goals>deploy site-deploy</goals>
            <autoVersionSubmodules>true</autoVersionSubmodules>
            <useReleaseProfile>false</useReleaseProfile>
            <releaseProfiles>sonatype-release</releaseProfiles>
            <tagNameFormat>v@{project.version}</tagNameFormat>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.5.0</version>
          <configuration>
            <excludePackageNames>org.biopax.validator.*:net.biomodels.*</excludePackageNames>
            <failOnError>false</failOnError>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jxr-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.4.5</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.12.1</version>
          <!--<configuration>-->
          <!--<skipDeploy>true</skipDeploy>-->
          <!--</configuration>-->
        </plugin>
        <plugin>
          <groupId>org.sonatype.plugins</groupId>
          <artifactId>nexus-staging-maven-plugin</artifactId>
          <version>1.6.13</version>
        </plugin>
        <plugin>
          <artifactId>maven-gpg-plugin</artifactId>
          <groupId>org.apache.maven.plugins</groupId>
          <version>1.6</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-ssh</artifactId>
        <version>2.10</version>
      </extension>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-scm</artifactId>
        <version>2.10</version>
      </extension>
      <extension>
        <groupId>org.apache.maven.doxia</groupId>
        <artifactId>doxia-integration-tools</artifactId>
        <version>1.11.1</version>
      </extension>
    </extensions>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <testFailureIgnore>false</testFailureIgnore>
          <!-- if using JDK >15 use the args below (can set JDK_JAVA_OPTIONS instead) -->
          <argLine>-ea --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
          <!-- -Dpaxtools.normalizer.use-latest-registry=true -Dpaxtools.model.safeset=list -->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-descriptor</id>
            <goals>
              <goal>attach-descriptor</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <skipDeploy>true</skipDeploy>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.9.3</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
        <version>5.9.3</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>net.sourceforge.collections</groupId>
        <artifactId>collections-generic</artifactId>
        <version>4.01</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.8.1</version>
      </dependency>
      <dependency>
        <groupId>com.hp.hpl.jena</groupId>
        <artifactId>jena</artifactId>
        <version>2.6.4</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>2.0.7</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>jcl-over-slf4j</artifactId>
        <version>2.0.7</version>
        <scope>runtime</scope>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>jul-to-slf4j</artifactId>
        <version>2.0.7</version>
        <scope>runtime</scope>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>log4j-over-slf4j</artifactId>
        <version>2.0.7</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.4.8</version>
        <optional>true</optional>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-core</artifactId>
        <version>2.15.2</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>2.15.2</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>1.18.24</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jcl-over-slf4j</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jul-to-slf4j</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <repositories>
    <!-- we'd remove repos below if everything were on OSSRH and Maven Central... -->
    <repository>
      <id>ossrh</id>
      <name>OSSRH Repository</name>
      <url>https://oss.sonatype.org/content/groups/public/</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>ebi-repo</id>
      <name>The EBI internal repository</name>
      <url>https://www.ebi.ac.uk/~maven/m2repo</url>
    </repository>
    <repository>
      <id>intact.nexus</id>
      <name>IntAct Nexus</name>
      <url>https://www.ebi.ac.uk/intact/maven/nexus/content/groups/public/</url>
    </repository>
  </repositories>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <linksource>true</linksource>
          <notimestamp>true</notimestamp>
          <links combine.children="append">
            <link>http://download.oracle.com/javase/17/docs/api/</link>
          </links>
          <level>public</level>
          <excludePackageNames>org.biopax.validator.*:net.biomodels.*</excludePackageNames>
          <failOnError>false</failOnError>
        </configuration>
        <reportSets>
          <reportSet>
            <id>default</id>
            <reports>
              <!-- no test-javadoc -->
              <report>javadoc</report>
            </reports>
          </reportSet>
          <reportSet>
            <id>aggregate</id>
            <inherited>false</inherited>
            <reports>
              <report>aggregate</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <reportSets>
          <reportSet>
            <id>aggregate</id>
            <inherited>false</inherited>
            <reports>
              <report>aggregate</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>3.4.5</version>
        <configuration>
          <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
        </configuration>
        <reportSets>
          <reportSet>
            <reports>
              <report>index</report>
              <report>summary</report>
              <report>modules</report>
              <report>dependencies</report>
              <report>dependency-info</report>
              <report>distribution-management</report>
              <report>issue-management</report>
              <report>licenses</report>
              <report>team</report>
              <report>mailing-lists</report>
              <report>scm</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>
</project>

